--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,6 +7,13 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
+        android:id="@+id/reset_password"
+        android:orderInCategory="100"
+        android:title="@string/reset_passwoed"
+        app:showAsAction="never" />
+
+
+    <item
         android:id="@+id/delete_account"
         android:orderInCategory="100"
         android:title="@string/delete_account"
