--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/forgetPasswordTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
